# abra

./: .gitignore  .gitmodules  404.html  Cargo.toml  README.md  Trunk.toml  about.html  abra.js  clippy.toml  deny.toml  index.html  print.html  rustfmt.toml  scratch.abra  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-02ea6d78.js  searchindex-1278c060.js  searchindex-1af9c72d.js  searchindex-26f67b64.js  searchindex-3a678ecd.js  searchindex-582e3c8a.js  searchindex-73185e3e.js  searchindex-77fdeb5f.js  searchindex-8b41fd48.js  searchindex-903acf28.js  searchindex-967fed6a.js  searchindex-996e03d1.js  searchindex-a07792e4.js  searchindex-a63efa1b.js  searchindex-ca073505.js  searchindex-caa3623f.js  searchindex-cacafa2c.js  searchindex-f197b32e.js  searchindex-fedd2295.js  searchindex.js  searchindex.json  toc-03ca1ffe.js  toc-3af2e853.js  toc-c59473e4.js  (+5 more)
Formula/: abra.rb
abra_cli/: Cargo.toml  build.rs  host_funcs.abra
abra_cli/src/: host_funcs.rs  main.rs
abra_cli/tests/: integration.rs
abra_cli/tests/modules/test_ffi/rust_project/: Cargo.toml  build.rs
abra_cli/tests/modules/test_ffi/rust_project/src/: test_ffi.rs
abra_cli/tests/test_host_funcs/: Cargo.toml  build.rs
abra_cli/tests/test_host_funcs/abra_src/: main.abra  util.abra
abra_cli/tests/test_host_funcs/src/: host_funcs.rs  lib.rs  main.rs
abra_cli/tests/test_host_funcs_helper/: Cargo.toml
abra_cli/tests/test_host_funcs_helper/src/: lib.rs
abra_core/: Cargo.toml
abra_core/benches/: vm.rs
abra_core/src/: abra_grammar.lalrpop  addons.rs  assembly.rs  ast.rs  bindings_common.rs  builtin.rs  effects.rs  environment.rs  eval_translate.rs  eval_tree.rs  foreign_bindings.rs  grammar.pest  host.rs  host_bindings.rs  install.rs  interpreter.rs  intrinsic.rs  lexer.rs  lib.rs  lsp_helper.rs  main.rs  misc_utils.rs  operators.rs  optimize_bytecode.rs  parse.rs  parse2.rs  parse_tree.rs  parser.rs  prelude.rs  side_effects.rs  statics.rs  tokenizer.rs  translate.rs  translate_bytecode.rs  type_checker.rs  typed_tree.rs  types.rs  vm.rs
abra_core/src/parse/: lexer.rs
abra_core/src/parser/: grammar.pest  parser.rs
abra_core/src/statics/: error.rs  pat_exhaustiveness.rs  resolve.rs  typecheck.rs
abra_core/src/utils/: hash.rs  id_set.rs  mod.rs
abra_core/tests/integration/: e2e_bytecode.rs  ffi.abra  helper.rs  lsp.rs  main.rs  resolve.rs  threads.rs  typecheck.rs  utils.rs
abra_core/tests/integration/modules/test_ffi/rust_project/: Cargo.toml
abra_lsp/: Cargo.toml
abra_lsp/src/: main.rs
book/: book.toml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: ffi.abra  test.abra  test.rs
cli/tests/modules/: test.abra  test_ffi.abra
cli/tests/modules/test/rust_project/: Cargo.toml
cli/tests/modules/test/rust_project/src/: lib.rs  test.rs
cli/tests/modules/test_ffi/rust_project/: Cargo.toml
cli/tests/modules/test_ffi/rust_project/src/: lib.rs  test_ffi.rs
core/: Cargo.toml
core/benches/: compile.rs  my_benchmark.rs  run.rs  vm.rs
core/src/: addons.rs  assembly.rs  ast.rs  builtin.rs  effects.rs  environment.rs  eval_tree.rs  grammar.pest  interpreter.rs  lib.rs  main.rs  namespace.rs  operators.rs  parse.rs  prelude.rs  side_effects.rs  stack_ir.rs  statics.rs  translate.rs  translate_bytecode.rs  translate_eval_tree.rs  translate_stack_ir.rs  util.rs  virtual_machine.rs  vm.rs
core/src/statics/: declarations.rs  exhaustive.rs  exhaustiveness.rs  mod.rs  pat_exhaustiveness.rs  resolution.rs  resolve.rs  typecheck.rs
core/tests/: e2e_bytecode.rs  e2e_tree_walk.rs  test.rs  typecheck.rs  utils.rs
docs/: abra.js  abra_bg.wasm  development.md  index.html
e2e_tests/: Cargo.toml  README.md  c_ffi.abra  ffi.abra  ffi_scheduler.abra  fs.abra  raylib_import.abra
e2e_tests/modules/: test_c_ffi.abra  test_ffi.abra
e2e_tests/modules/test_c_ffi/: abra_foreign_module.txt  test_c_ffi.c
e2e_tests/modules/test_ffi/: abra_foreign_module.txt
e2e_tests/modules/test_ffi/rust_project/: Cargo.toml
e2e_tests/modules/test_ffi/rust_project/src/: lib.rs  test_ffi.rs
e2e_tests/modules/test_ffi/rust_project/src/test_ffi/: mod.rs
e2e_tests/test_host_funcs/: build.rs
e2e_tests/test_host_funcs/abra_src/: main.abra  util.abra  util_helper.abra
e2e_tests/test_host_funcs/abra_src/more_stuff/: derp.abra
e2e_tests/test_host_funcs/src/: generated.rs  host_funcs.rs  main.rs
e2e_tests/tests/integration/: fs.rs  main.rs
editor/: Cargo.toml  index.html
editor/assets/: sw.js
editor/src/: main.rs
examples/: ackermann.abra  args.abra  array_len.abra  array_out_of_bounds.abra  arrays.abra  better_imports.abra  clone_array.abra  control_flow.abra  create_file.abra  doom_fire.abra  early_return.abra  echo_args.abra  enum.abra  exec.abra  extend_array.abra  extend_struct.abra  fast_fib.abra  ffi.abra  fib.abra  fib_imperative.abra  forloop.abra  functions.abra  game_of_life.abra  hello.abra  helper.abra  helper2.abra  host_function.abra  iterate.abra  lambda.abra  lisp.abra  lisp_example.lsp  list.abra  madlibs  madlibs.abra  main.abra  mandelbrot.abra  matrix_rain.abra  more_enums.abra  my_lib.abra  option_and_result.abra  (+30 more)
language_reference/: builtin_types.html  control_flow.html  enums.html  error_handling.html  foreign_functions.html  functions.html  generics.html  interfaces.html  lambdas.html  member_functions.html  namespaces.html  operators.html  patterns.html  primitive_types.html  standard_library.html  structs.html  tasks_and_channels.html  variables.html
module_tests/: crypto.abra  encoding.abra  env.abra  exec.abra  fs.abra  http.abra  json.abra  map.abra  regex.abra  set.abra  signals.abra  (+3 more)
modules/core/rust_project/: Cargo.toml  build.rs
modules/core/rust_project/src/: exec.rs  lib.rs  random.rs
modules/core/rust_project/src/core/: crypto.rs  encoding.rs  env.rs  exec.rs  fs.rs  http.rs  mod.rs  regex.rs  signals.rs  strings.rs  time.rs
modules/random/rust_project/: Cargo.toml
modules/random/rust_project/src/: lib.rs  random.rs
modules/term/rust_project/: Cargo.toml
modules/term/rust_project/src/: lib.rs  term.rs
modules/term/rust_project/src/term/: mod.rs
(+221 files in other folders)
