[workspace]
resolver = "2"
members = [
    "abra_cli",
    "abra_core",

    # Abra libraries with Rust implementations
    "modules/*/rust_project",

    # integration tests
    "abra_core/tests/integration/modules/*/rust_project",
    "abra_core/tests/integration/test_host_funcs/",

    "utils",
]

[workspace.dependencies]
abra_core = { path = "abra_core" }
utils = { path = "utils" }

[profile.release]
lto = true
