[workspace]
resolver = "2"
members = [
    "abra_cli",
    "abra_core",

    # Abra libraries with Rust implementations
    "modules/*/rust_project",

    # end-to-end tests
    "tests",
    "tests/modules/*/rust_project",
    "tests/test_host_funcs/",

    "utils",
]

[workspace.dependencies]
abra_core = { path = "abra_core" }
utils = { path = "utils" }

[profile.release]
lto = true
