[package]
name = "abra_cli"
version = "0.0.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2024"
license = "MPL-2.0"
publish = false

[[bin]]
name = "abra"
path = "src/main.rs"

[dependencies]
abra_core = { workspace = true, features = ["ffi"] }
clap = { version = "4.5.38", features = ["derive"] }
home = "0.5.11"
libloading = "0.8.7"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
utils = { workspace = true }

[build-dependencies]
abra_core = { workspace = true, features = ["ffi"] }
