[package]
name = "abra_cli"
version = "0.0.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2024"
license = "MPL-2.0"
publish = false

[[bin]]
name = "abra"
path = "src/main.rs"

[dependencies]
abra_core = { workspace = true, features = ["ffi"] }
clap = { version = "4.5.51", features = ["derive"] }
home = "0.5.12"
libloading = "0.9.0"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
utils = { workspace = true }

[build-dependencies]
abra_core = { workspace = true, features = ["ffi"] }
