[package]
name = "abra_cli"
version = "0.0.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2024"
license = "MPL-2.0"
publish = false

[[bin]]
name = "abra"
path = "src/main.rs"

[dependencies]
abra_core = { workspace = true, features = ["ffi"] }
lexopt = "0.3.1"
home = "0.5.12"
utils = { workspace = true }

[build-dependencies]
abra_core = { workspace = true, features = ["ffi"] }
