[package]
name = "abra_core"
version = "0.0.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2024"
license = "MPL-2.0"
publish = false

[lib]
name = "abra_core"
crate-type = ["lib"]
path = "src/lib.rs"

[features]
ffi = []

[dependencies]
disjoint-sets = "0.4.2"
libloading = "0.8.5"
pest = "2.5.2"
pest_derive = "2.5.2"
strum = { version = "0.26.3", features = [
  "derive",
] } # TODO: try and get rid of this dependency
strum_macros = "0.26.3" # TODO: try and get rid of this
codespan-reporting = "0.11.1"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
  "html_reports",
  "plotters",
  "cargo_bench_support",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["rayon"] }

[[bench]]
name = "vm"
harness = false
