[package]
name = "abra_core"
version = "0.0.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2024"
license = "MPL-2.0"
publish = false

[lib]
name = "abra_core"
crate-type = ["lib"]
path = "src/lib.rs"

[features]
ffi = ["libloading"]

[dependencies]
disjoint-sets = "0.4.2"                               # TODO: implement your own disjoint sets
libloading = { version = "0.9.0", optional = true }
pest = "2.8.3"                                        # TODO: remove after hand-writing parser
pest_derive = "2.8.3"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
codespan-reporting = "0.13.1"
heck = "0.5.0"
utils = { workspace = true }

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false, features = [
    "html_reports",
    "plotters",
    "cargo_bench_support",
] }
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.7.0", features = ["rayon"] }

[[bench]]
name = "vm"
harness = false
