[package]
name = "abra_core"
version = "0.0.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2024"
license = "MPL-2.0"
publish = false

[lib]
name = "abra_core"
crate-type = ["lib"]
path = "src/lib.rs"

[features]
ffi = ["libloading"]

[dependencies]
codespan-reporting = "0.13.1"
disjoint-sets = "0.4.2" # TODO: implement your own disjoint sets
heck = "0.5.0"
libloading = { version = "0.9.0", optional = true }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
utils = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8.1", default-features = false, features = [
    "html_reports",
    "plotters",
    "cargo_bench_support",
] }
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.8.1", features = ["rayon"] }

[[bench]]
name = "vm"
harness = false
