[package]
name = "abra_lsp"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "abra-lsp"
path = "src/main.rs"

[dependencies]
abra_core = { workspace = true, features = ["ffi"] }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
