[package]
name = "abra_cli"
version = "0.1.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2021"
license = "MPL-2.0"

# to prevent accidental publish to crates.io
publish = false

[[bin]]
name = "abra"
path = "src/main.rs"

[dependencies]
abra_core = { path = "../core", features = ["ffi"] }
clap = { version = "4.4.11", features = ["derive"] }
libloading = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.3"
