[package]
name = "abra_core"
version = "0.1.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2021"
license = "MPL-2.0"

[lib]
name = "abra_core"
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
criterion = "0.5.1"
disjoint-sets = "0.4.2"
pest = "2.5.2"
pest_derive = "2.5.2"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.3"

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "compile"
harness = false
