[package]
name = "abra_core"
version = "0.1.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2021"
license = "MPL-2.0"

[lib]
name = "abra_core"
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
bincode = "2.0.0-rc"
disjoint-sets = "0.4.2"
pest = "2.5.2"
pest_derive = "2.5.2"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.3"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
        "html_reports",
        "plotters",
        "cargo_bench_support"
      ]}

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["rayon"] }

[[bench]]
name = "vm"
harness = false
