[package]
name = "abra_core"
version = "0.1.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "abra_core"
crate-type = ["lib"]
path = "src/lib.rs"

[features]
ffi = []

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
disjoint-sets = "0.4.2"
libloading = "0.8.5"
pest = "2.5.2"
pest_derive = "2.5.2"
serde_derive = "1.0.215"                               # Todo: really need this? Just to read a toml file for the package name?
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.3"
toml = "0.8.19"
codespan-reporting = "0.11.1"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
  "html_reports",
  "plotters",
  "cargo_bench_support",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", features = ["rayon"] }

[[bench]]
name = "vm"
harness = false
