[package]
name = "abra_editor"
version = "0.1.0"
authors = ["Anand Dukkipati <aRdukkipati@gmail.com>"]
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "abra_editor"
path = "src/main.rs"

[dependencies]
abra_core = { path = "../core" }
debug_print = "1.0.0"
regex = "1.7.0"
egui = "0.25.0"
eframe = { version = "0.25.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
once_cell = "1.18.0"
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
