[package]
name = "abra_module_core"
version = "0.0.0"
edition = "2024"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
abra_core = { workspace = true }
rand = "0.9.4"
glob = "0.3"
chrono = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
base64 = "0.22"
signal-hook = "0.3"

[build-dependencies]
abra_core = { workspace = true }
