[package]
name = "term"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
abra_core = { path = "../../../core" }
crossterm = "0.28.1"

[build-dependencies]
abra_core = { path = "../../../core" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
