[package]
name = "abra_module_test_ffi"
version = "0.0.0"
edition = "2024"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

# also need to do dylib so that taking this as a dependency doesn't give a warning
# please do the instructions above

[dependencies]
abra_core = { workspace = true }

[build-dependencies]
abra_core = { workspace = true }
